FLOW-6203 Remove ssv1 and snowpipe code, rewrite tests   (#1200)
FLOW-6203 Remove ssv1 and snowpipe code, rewrite tests